# mff_vector_drawing

./: CMakeLists.txt  Readme.md  Readme2.md  Specifikace.md
projects/core/: CMakeLists.txt
projects/core/include/mff/: algorithms.h  into.h  leaf.h  object_pool.h  optional.h  utils.h
projects/core/include/mff/algorithms/: contains.h  map.h  min.h
projects/core/src/: CMakeLists.txt  utils.cpp
projects/graphics/: CMakeLists.txt  LICENSE-MIT
projects/graphics/include/mff/graphics/: constants.h  logger.h  math.h  memory.h  utils.h  window.h
projects/graphics/include/mff/graphics/vulkan/: debug.h  device.h  dispatcher.h  format.h  instance.h  render_pass.h  swapchain.h  sync.h  version.h  vulkan.h
projects/graphics/include/mff/graphics/vulkan/command_buffer/: command_buffer.h  command_pool.h
projects/graphics/include/mff/graphics/vulkan/descriptor/: descriptor.h  pipeline_layout.h
projects/graphics/include/mff/graphics/vulkan/framebuffer/: desc.h  framebuffer.h
projects/graphics/include/mff/graphics/vulkan/graphics_pipeline/: builder.h
projects/graphics/include/mff/graphics/vulkan/image/: image.h  traits.h
projects/graphics/include/mff/graphics/vulkan/pipeline/: blend.h  depth_stencil.h  raster.h  shader.h  vertex.h  viewport.h
projects/graphics/include/mff/graphics/vulkan/sync/: fence.h  semaphore.h  sync.h
projects/graphics/include/mff/graphics/window/: event_loop.h  events.h  events_debug.h  glfw_window.h  window.h
projects/graphics/src/: CMakeLists.txt  logger.cpp  math.cpp  memory.cpp  utils.cpp  utils.h
projects/graphics/src/vulkan/: CMakeLists.txt  debug.cpp  device.cpp  dispatcher.cpp  format.cpp  instance.cpp  render_pass.cpp  swapchain.cpp  sync.cpp  version.cpp
projects/graphics/src/vulkan/command_buffer/: CMakeLists.txt  command_pool.cpp
projects/graphics/src/vulkan/command_buffer/builders/: CMakeLists.txt  auto.cpp  sync.cpp  unsafe.cpp
projects/graphics/src/vulkan/descriptor/: CMakeLists.txt  descriptor.cpp  pipeline_layout.cpp
projects/graphics/src/vulkan/framebuffer/: CMakeLists.txt  desc.cpp  framebuffer.cpp
projects/graphics/src/vulkan/graphics_pipeline/: CMakeLists.txt  builder.cpp
projects/graphics/src/vulkan/image/: CMakeLists.txt  image.cpp
projects/graphics/src/vulkan/pipeline/: CMakeLists.txt  blend.cpp  depth_stencil.cpp  raster.cpp  shader.cpp  vertex.cpp  viewport.cpp
projects/graphics/src/vulkan/sync/: CMakeLists.txt  fence.cpp  semaphore.cpp  sync.cpp
projects/graphics/src/window/: event_loop.cpp  glfw_window.cpp  window.cpp
projects/parser_combinator/: CMakeLists.txt
projects/parser_combinator/include/mff/parser_combinator/: ParserResultInner.h  buffered_stream.h  parser_result.h  parser_result_inner.h  parsers.h  stream.h  utils.h
projects/parser_combinator/include/mff/parser_combinator/combinators/: many.h
projects/parser_combinator/include/mff/parser_combinator/error/: ParserError.h  default_error.h  error_kind.h  error_traits.h  parser_error.h
projects/parser_combinator/include/mff/parser_combinator/parsers/: branch.h  bytes.h  character.h  combinator.h  multi.h  sequence.h
projects/parser_combinator/include/mff/parser_combinator/parsers/branch/: alt.h
projects/parser_combinator/include/mff/parser_combinator/parsers/bytes/: is_a.h  is_not.h  tag.h  take.h
projects/parser_combinator/include/mff/parser_combinator/parsers/character/: alpha.h  char.h  digit.h
projects/parser_combinator/include/mff/parser_combinator/parsers/combinator/: constant.h  ignore.h  map.h  opt.h  recognize.h  value.h  verify.h
projects/parser_combinator/include/mff/parser_combinator/parsers/multi/: many.h  separated_list.h  tuple.h
projects/parser_combinator/include/mff/parser_combinator/traits/: as_char.h  comparer.h  find_token.h  input_iterator.h  input_length.h  input_offset.h  input_take.h  input_take_at_position.h
projects/parser_combinator/src/: buffered_stream.cpp
projects/parser_combinator/tests/: pc_buffered_stream.cpp  pc_example_xml.cpp
projects/parser_combinator/tests/parsers/: alt.cpp  bytes.cpp  character.cpp  combinators.cpp  multi.cpp  sequence.cpp
projects/parser_combinator/tests/traits/: comparer.cpp  input_iter.cpp  input_take.cpp  input_take_at_position.cpp
projects/runner/: CMakeLists.txt  canvas.h  instance.h  main.cpp  main2.cpp  main_graphics_vulkan_api.cpp  renderer.h  renderer2.h
projects/runner/canvas/: CMakeLists.txt  canvas.cpp  canvas.h  contour.cpp  contour.h  math.cpp  math.h  outline.cpp  outline.h  path.cpp  path.h  segment.cpp  segment.h  stroke.cpp  stroke.h
projects/runner/canvas/svg/: CMakeLists.txt  path.cpp  path.h  path_new.cpp  xml.cpp  xml.h
projects/runner/glfw/: raii.h
projects/runner/internal/: CMakeLists.txt  constants.h  eigen.h  expected.h  fontstash.h  glfw.h  leaf.h  nanovg.c  nanovg.h  stb_image.h  stb_truetype.h  utils.h  vulkan.h
projects/runner/internal/renderer/: CMakeLists.txt  renderer.h  utils.cpp  utils.h
projects/runner/internal/renderer/vulkan/: CMakeLists.txt  debug.cpp  debug.h  device.cpp  device.h  dispatcher.cpp  dispatcher.h  graphics_pipeline.cpp  graphics_pipeline.h  instance.cpp  instance.h  layers.cpp  layers.h  logical_device.cpp  logical_device.h  physical_device.cpp  physical_device.h  queue_family.cpp  queue_family.h  render_pass.cpp  render_pass.h  swapchain.cpp  swapchain.h  sync.cpp  sync.h
projects/runner/internal/window/: CMakeLists.txt  context.cpp  context.h  event_loop.cpp  event_loop.h  events.h  events_debug.h  glfw_window.cpp  glfw_window.h  utils.cpp  utils.h  window.cpp  window.h
projects/runner/renderer/: CMakeLists.txt  init.cpp  init.h  renderer.cpp  renderer.h  renderer_context.cpp  renderer_context.h  renderer_surface.cpp  renderer_surface.h  vulkan_engine.cpp  vulkan_engine.h  vulkan_presenter.cpp  vulkan_presenter.h  vulkan_shaders.cpp  vulkan_shaders.h
projects/runner/resources/shaders/: convert.sh  shader.vert  shader.vert.spv
projects/runner/utils/: CMakeLists.txt  debug.h  logger.cpp  logger.h  utils.h
projects/runner/utils/debug/: format.h
(+10 files in other folders)
